--- a/CV.css
+++ b/CV.css
@@ -1,31 +1,42 @@
 html,
 body {
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+p {
+  margin: 20px;
 }
 
 ul {
+  display: flex;
+  justify-content: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   background-color: #333;
   position: fixed;
   top: 0;
   width: 100%;
   opacity: 0.8;
   z-index: 500;
+  font-size: 18px;
 }
 
 li {
-  float: right;
+  margin: auto;
+  padding: 10px 10px;
 }
 
 li a {
-  display: block;
   color: white;
-  text-align: center;
-  padding: 14px 16px;
+  padding: 10px 14px;
   text-decoration: none;
 }
 
@@ -33,25 +44,26 @@ li a:hover:not(.active) {
   background-color: #111;
 }
 
-.active {
-  background-color: #cca300;
-}
-
-body {
-  background-color: #ffffff;
-}
-
 /* HEADER */
 
 .header {
+  display: flex;
+  flex-direction: column;
   top: 0px;
   left: 0px;
   padding: 100px;
   text-align: center;
-  background: url(images/bighill.jpg) no-repeat center;
+  background: url(images/bighill.jpg) center center;
+  background-size: cover;
   color: white;
   font-size: 30px;
   text-shadow: 2px 2px black;
+  align-items: center;
+}
+
+#headername {
+  font-size: 40px;
+  padding: 10px 10px;
 }
 
 .name {
@@ -62,64 +74,50 @@ body {
   font-size: 30px;
 }
 
-.webdev {
+/* .webdev {
   position: absolute;
   top: 30px;
   left: 600px;
   color: white;
   font-size: 30px;
-}
-
-.face {
-  position: relative;
-  float: left;
-  top: -350px;
-  left: 20px;
-  width: 150px;
-}
-
-.logo {
-  position: relative;
-  margin: 0px;
-  padding: 0px;
-  top: 10px;
-  left: 0px;
-  width: 100px;
-  float: right;
-}
+} */
 
 .theselogos {
   width: 100px;
+  margin: 0 auto;
 }
 
 .photoshoplogo {
   width: 30px;
-  position: relative;
-  top: 8px;
-  right: 4px;
+  margin: 0 auto;
 }
 
 .LC {
   color: white;
-  position: fixed;
-  top: 12px;
-  left: 5px;
 }
 
+.heading {
+  text-align: center;
+}
+
+.face {
+  width: 150px;
+}
 /* BIO */
+#bio {
+  text-align: center;
+}
 
 .aboutme {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   max-width: 950px;
   margin: 0 auto;
 }
 
 .aboutme {
   background-color: #e6f4f8;
-  width: 100%;
-  position: relative;
-  left: 50px;
+  width: 90%;
   margin: 40px auto;
   padding: 10px;
   text-align: center;
@@ -129,27 +127,30 @@ body {
 /* LANGUAGESPROGRESS */
 
 .progress {
-  background-color: #e6f4f8;
-  max-width: 950px;
-  margin: 40px auto;
-  font-size: 18px;
-}
-
-.progressbar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  line-height: 0.2em;
+  max-width: 950px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  background-color: #e6f4f8;
+  width: 90%;
+  padding: 10px;
+  font-size: 18px;
 }
 
 /* EXPERPRO */
 
 .experpro {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   max-width: 950px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   margin-bottom: 10px;
   background-color: #e6f4f8;
-  width: 100%;
+  width: 90%;
   margin: 50px auto;
   padding: 10px;
   text-align: left;
@@ -165,137 +166,11 @@ body {
   margin: 0 auto;
   margin-bottom: 10px;
   background-color: #e6f4f8;
-  width: 100%;
+  width: 90%;
   margin: 50px auto;
   padding: 10px;
   text-align: left;
   font-size: 18px;
-}
-
-/* SLIDESHOW */
-
-* {
-  box-sizing: border-box;
-}
-body {
-  font-family: Verdana, sans-serif;
-  margin: 0;
-}
-.mySlides {
-  display: none;
-}
-img {
-  vertical-align: middle;
-}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(250, 245, 245, 0.8);
-}
-
-/* Caption text */
-.text {
-  color: #ffffff;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #000000;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev,
-  .next,
-  .text {
-    font-size: 11px;
-  }
 }
 
 /* QUOTE */
@@ -304,10 +179,21 @@ img {
 }
 
 /* CONTACTFORM */
+.questionform {
+  display: grid;
+  background-color: #e6f4f8;
+  padding: 20px;
+  width: 90%;
+  margin: 0 auto;
+  font-size: 18px;
+  justify-content: center;
+  align-items: center;
+}
 
 input[type="text"],
 select,
 textarea {
+  margin: auto;
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -321,6 +207,7 @@ textarea {
 input[type="email"],
 select,
 textarea {
+  margin: auto;
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -344,21 +231,12 @@ input[type="submit"]:hover {
   background-color: #56e2f5;
 }
 
-.questionform {
-  border-radius: 5px;
-  background-color: #e6f4f8;
-  padding: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  margin: 0 auto;
-  font-size: 18px;
-  justify-content: center;
-}
-
 /* FOOTER */
 
 footer {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
   background-color: #333;
   height: 60px;
   color: silver;
@@ -368,4 +246,94 @@ footer {
   text-align: center;
 }
 
-/* HELLO HELLO */
+.meter {
+  width: 150%;
+  height: 10px;
+  background: #555;
+  border-radius: 25px;
+  padding: 10px;
+  box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
+}
+
+.meter > span {
+  display: flex;
+  height: 100%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: rgb(43, 194, 83);
+  background-image: linear-gradient(
+    center bottom,
+    rgb(43, 194, 83) 37%,
+    rgb(84, 240, 84) 69%
+  );
+  box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
+    inset 0 -2px 6px rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  animation: growth 5s;
+}
+
+@keyframes growth {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 80%;
+  }
+}
+
+.meter2 {
+  width: 100%;
+  height: 10px;
+  background: #555;
+  border-radius: 25px;
+  padding: 10px;
+  box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
+}
+
+.meter2 > span {
+  display: flex;
+  height: 100%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: rgb(43, 194, 83);
+  background-image: linear-gradient(
+    center bottom,
+    rgb(43, 194, 83) 37%,
+    rgb(84, 240, 84) 69%
+  );
+  box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
+    inset 0 -2px 6px rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  animation: growth2 5s;
+}
+
+@keyframes growth2 {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  ul {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  footer {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+}
