--- a/CV.css
+++ b/CV.css
@@ -3,8 +3,7 @@ body {
   background-color: #ffffff;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
@@ -51,8 +50,15 @@ li a:hover:not(.active) {
   flex-direction: row;
   justify-content: center;
   font-size: xx-large;
-  margin: 120px;
+  margin: 0 auto;
+  padding: 115px;
+  background-color: #fdfdef;
   animation: swipe 2s;
+}
+
+.welcomeline:hover {
+  box-shadow: 50px 5px 40px 20px rgb(138, 145, 146);
+  transition: box-shadow 0.3s ease-in-out;
 }
 @keyframes swipe {
   from {
