--- a/CV.css
+++ b/CV.css
@@ -212,13 +212,17 @@ li a:hover:not(.active) {
 
 .complogos {
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: repeat(4, auto);
 }
 
 .clogos {
-  height: 200px;
-  width: 200px;
+  height: 180px;
+  width: 180px;
   padding: 30px;
+}
+
+.descriptions {
+  opacity: 0;
 }
 
 .clogos:hover {
@@ -226,9 +230,14 @@ li a:hover:not(.active) {
   transition: box-shadow 0.3s ease-in-out;
 }
 
+.clogos:hover + .descriptions {
+  transition: opacity 2s;
+  opacity: 1;
+}
+
 .competences:hover {
   box-shadow: 1px 1px 50px 10px rgb(188, 195, 196);
-  transition: box-shadow 0.3s ease-in-out;
+  transition: box-shadow 2s ease-in-out;
 }
 
 /* TESTIMONIALS */
@@ -251,7 +260,7 @@ li a:hover:not(.active) {
 
 .quote:hover {
   box-shadow: 1px 1px 50px 10px rgb(188, 195, 196);
-  transition: box-shadow 0.3s ease-in-out;
+  transition: box-shadow 2s ease-in-out;
 }
 
 .faces {
