--- a/CV.css
+++ b/CV.css
@@ -94,7 +94,7 @@ li a:hover:not(.active) {
   left: 0px;
   padding: 100px;
   text-align: center;
-  background: url(images/bighill.jpg) center center;
+  background: url(bighill.jpg) center center;
   background-size: cover;
   color: white;
   font-size: 30px;
